--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -47,6 +47,20 @@ body,
   height: 15px !important;
 }
 
+.logo {
+  max-width: 50px;
+  height: auto;
+  margin-bottom: -.75rem;
+  padding-right: 1rem;
+}
+
+.landing-button {
+  width: 100%;
+  border-radius: 6px;
+  margin-top: 5px;
+  height: 35px;
+}
+
 .login-page {
   background-color: $primary-500;
   height: 100%;
