hardcoding in directions for the chat app specifications

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -209,6 +209,7 @@ body,
   color: $tertiary-50 !important;
   z-index: 2 !important;
   width: 100% !important;
+  // text-align: center !important;
 }
 
 .message-form-assist {
